--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "fecha": "^4.2.3",
     "file-saver": "^2.0.5",
     "lottie-react": "^2.4.0",
-    "next": "14.2.3",
+    "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
